Bug 1821231: Take RTX stats into account for outbound-rtp stats. r=ng

Differential Revision: https://phabricator.services.mozilla.com/D172615